--- a/VISTA/frmUsuarios.resx
+++ b/VISTA/frmUsuarios.resx
@@ -117,4 +117,23 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnReload.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        rgAAAK4B+ff3XQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAKoSURBVEhLzZVL
+        bBJRFIaJGne6caHGuHBjjInaLozGjUseBQcGsT6SZmZsXBuLNqKltIBoTNSlZQaqqSu3JiamGjVxpRaL
+        LQyP2seuFgasr8aGFO8ZzoWBCp3Uhf7Jv5h7Jt859577MPw38vnKG7jhhR2uYKbN5UtsxuG/U7f4ebsg
+        Kn28pLwjLhGXjT3vVXd4Pn5nfPJL5kZ2P/6uX67H5Y0I/gZQrWkCapN7rGz3yS90z+rcI2UrAT1tBFM3
+        JqBmvIkYIpoLKieQRvgyL+VHOElxnZeK7WxoqpMNZO6e8E7OGHvGVLj5yoeSMzTbjpjmwmXRwse7wrm9
+        GF4lpz9tsV6bWDwZmnbhUHNBQwlQu+bjQiS3BcP6RHaaI5QV8KteDdUvt6q8mRhf8jU03RHM9uJQTQQK
+        WxET5EdwWLdYf0oyuisNN1+OrTgCKQZD1eaq+xwMDcWQLrGB1EUKpzb3xkqdofRh9Qc4obXqSYJwsU0N
+        6BB7a+aoiVSshVPDYYSlcRPf1yYQJCUsiIVg18Ov25DTVKcDU7vtg+knTL8c18KZAfmNwy8/MPBi/pUW
+        rnHuwlBuJ3LWlMOfuUfhJrJc1ZMNVRJYqg4uKj/5sHJM/UGnbH2TczSB1RP/gcMVdYtf9hDwPCZY4aTC
+        WQzpkvPmtA22J01gH5SfYagmPpo/ApVzEeUSDukS9MByNb5E4dBwuNIxXC8+qtRdvXy0eJwbyu/Dz1Vi
+        g586LJ4aXK1+IPkcw63FDRcOkOVaJP4FB0+IKKeESPGQM5A5Aw21eROz9LKjtl2fWNB1beO9NIc9qbMW
+        qLUV4HfSuxDRWuR53MRF8h4CXForAaw5uYNG1/WMwkxI0/v5iPKWwKtPJuyYypOZHF3Xk/knwazg4Dlv
+        pw7CtYzD/1oGw28PgVzFwW4mBQAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
