--- a/VISTA/frmMenuPrincipal.resx
+++ b/VISTA/frmMenuPrincipal.resx
@@ -441,6 +441,32 @@
         6o8AEQV+K1VrywQAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAALMAAACzAbnTigQAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAEl0lEQVRYR82WbUxbVRjHy6LRmEyNJr582AdjFj/4RT/4SROJ6wWcILbQlrb0tjDXaRaotLSMUqXD
+        TRlCW6DFwRwwhSEXtoXti5RlY47EZLyMF4d1i2YmC3GZbG7I6FrufXzu5YDl9hZlWOM/+SWXc85z/v/z
+        nHsbZOtVQV3XFtrXXUZ7mSvICO1hLLT/+JNkOjnSN3Q8avT10Gg4gHAIrMLHLBi9DGPwdGelus8+QMo2
+        JrfbvYmuZ14zeJlmNJmLM03MjMHTU0/X9b5Mtlqf8n3MC7S3242t/Vli83Vh9DCX+OvS+o4+TbaXlsl7
+        4nFsoRmLhpD4Fm+cRWSAv0Zz86lHiO2SMOVenAzHLE42s/WH6iqIvUxWeKBvMw4eEy1KFtz+g4Fjkb7c
+        QWJPBJBCPi2+VVKFAgYPA/rPukB7oBM01R0C/DM/hu+MZE0Mc0Zfd869kznaSJ9SFIDI5GEycOHN5SL8
+        rED96VeQXXkY3tzzOVA2P9KYAD+8VX4QFHtbIa+6U2x+2ejpfZH3WDMAL1N971Z9bddUdmXrAlUa4JYN
+        MsqaIMt1CA3aIKeqHVT7jkAukvNxO7zjboVMVwukOwIrgTIcTayyqv2uwfP1KXM18xjZ/u8D8KJK/WX8
+        JvypeTMMBPh7ILSbN86pahNOqkBjJT6r9n8J2ho8NV6DruaoMJfuaBKCyEsbU8m2gtYVgD8df8pMZ7PQ
+        4uXTJSLN7he6pMZA2R99IYxtKMC/QWwA6C92Q7DoKvIr9Be1kOF4JS1AsHgGAUIUzpoeJlOrJREgTJU2
+        DqdZG1vw2ZFm85spa6NKwOZ/l7I1OOU2/2FcMy2qWwkA/e89FWO+xGnLK4KhWCTAAtJKWf3bU91t0kkl
+        lP6B91kMlo/0Yz27EiBY9HpcgGCxQSgSi7IHXkq1B54hf963KHv91jRrYAv/zLcb34FyCFqqBQaKK+Gb
+        kieEhf8LwZTreZgqKlycpLOjY2p5IsLn1Ntv1xpK7nxicMTyR4c+X2q9FDCheo7YojG4N8F0hReBJfYA
+        d9EE7Kg6IZHTeXDz/QK4kbvjL1Q7YK7OAOyIdI0Ijh3V1ADIUmTwg2snb8x9XwaR7wzATdkxRDmwYzqp
+        whUiwTy4oY4JQFg4opdcL8XimIbGAM4LwskvlUP4vAbC53KFTnATuySLYrllM8UF+N26dvdiWRxTD8nQ
+        bJa9aIHwtzg4UQJ3BzKWAkzuliyK5c4+Oi7ArKlAcm0CrmMHKsa5yVKYD6bDvSEtLAwq/nkH7PEduGVZ
+        RwdG1RewA84y3jA6vAvbjxMTVgzgxHcgX7JomeigBn7TFsYFmG9eu05EiQyuFD2Ehif4EEs4gRvfKbV4
+        hcUhjXDXYvPbHxqBHZauEcONqRkYMT9IPkVZCky75OyUpZYdL3CxoypzIiLn1bvnPfmBazrdT79k5kWv
+        ZurYa7n667Plui6p9VJER1VvCJ/gRvSjXDmBwDIhubKTTP03QtMzsQGQuZmsrNX/8ydTlylljygAhCiF
+        ikwnX2jYTIz5q2hAzoS2KfRkOvkKbVM6QnJFf+jVtzeTofuQTPYnIknXl8eLjoIAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="btnReportes.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
